--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
       "name": "Digital Journal Tool",
       "version": "0.1.0",
       "private": true,
+      "engines": {
+            "node": ">=18.0.0"
+      },
       "dependencies": {
             "@radix-ui/react-accordion": "^1.2.3",
             "@radix-ui/react-alert-dialog": "^1.1.6",
